@@ -261,7 +261,7 @@ rec_hdrs = Split('rec/cursor.h rec/env.h rec/dbdefs.h rec/index.h rec/recmap.h '
 obj_hdrs = Split('obj/object.h obj/excontext.h obj/type.h obj/builtintypes.h '
                 'obj/expression.h obj/operator.h obj/opmap.h obj/tuple.h')
 obj_ihdrs = Split('obj/io.h obj/key.h obj/objinternal.h')
-rel_hdrs = Split('rel/rdb.h rel/typeimpl.h util/www.h '
+rel_hdrs = Split('rel/rdb.h rel/typeimpl.h '
                  'rel/optimize.h rel/qresult.h rel/tostr.h ')
 rel_ihdrs = Split('rel/catalog.h rel/cat_type.h rel/cat_op.h '
 		'rel/delete.h rel/serialize.h '
