@@ -434,45 +434,6 @@ Duro_parse_node_to_type_retry(RDB_parse_node *nodep, Duro_interp *interp,
     return typ;
 }
 
-/*
- * Initialize *objp and set type information, consuming typ on success.
- */
-int
-Duro_init_obj(RDB_object *objp, RDB_type *typ, Duro_interp *interp,
-        RDB_exec_context *ecp, RDB_transaction *txp)
-{
-    int i;
-
-    if (RDB_type_is_tuple(typ)) {
-        RDB_type *attrtyp;
-
-        for (i = 0; i < typ->def.tuple.attrc; i++) {
-            if (RDB_tuple_set(objp, typ->def.tuple.attrv[i].name,
-                    NULL, ecp) != RDB_OK)
-                return RDB_ERROR;
-            attrtyp = RDB_dup_nonscalar_type(typ->def.tuple.attrv[i].typ, ecp);
-            if (attrtyp == NULL)
-                return RDB_ERROR;
-
-            if (Duro_init_obj(RDB_tuple_get(objp, typ->def.tuple.attrv[i].name),
-                    attrtyp, interp, ecp, txp) != RDB_OK) {
-                if (!RDB_type_is_scalar(attrtyp)) {
-                    RDB_del_nonscalar_type(typ, ecp);
-                }
-                return RDB_ERROR;
-            }
-        }
-        RDB_obj_set_typeinfo(objp, typ);
-    } else if (RDB_type_is_array(typ)) {
-        RDB_obj_set_typeinfo(objp, typ);
-        if (RDB_set_array_length(objp, (RDB_int) 0, ecp) != RDB_OK)
-            return RDB_ERROR;
-    } else {
-        return RDB_set_init_value(objp, typ, interp->envp, ecp);
-    }
-    return RDB_OK;
-}
-
 /* Prepend id with module name */
 int
 Duro_module_q_id(RDB_object *dstobjp, const char *id, Duro_interp *interp, RDB_exec_context *ecp)
