@@ -572,4 +572,7 @@ int
 RDB_drop_constraint(const char *name, RDB_exec_context *,
         RDB_transaction *);
 
+int
+RDB_www_form_to_tuple(RDB_object *, const char *, RDB_exec_context *);
+
 #endif
