@@ -1,14 +1,0 @@
-/*
- * www.h
- *
- *  Created on: 31.12.2012
- *      Author: rene
- */
-
-#ifndef RDB_WWW_H_
-#define RDB_WWW_H_
-
-int
-RDB_www_form_to_tuple(RDB_object *, const char *, RDB_exec_context *);
-
-#endif /* RDB_WWW_H_ */
